--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Urban3<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -30,6 +30,8 @@
     </tr>
   </thead>
   <tbody>
+    <!-- 0 to 1 -->
+  <div id="proto">
     <tr>
       <td>0-1</td>
       <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
@@ -40,9 +42,191 @@
       </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
       <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
     </tr>
+  </div>
+    <!-- <tr>
+      <td>1-2</td>
+      <td><input type="number" id="aadtRural2" name="aadtRural2" class="form-control"></td>
+      <td><input id="inboundRural2" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural2Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural2" name="outboundRural2" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban2" name="aadtUrban2" class="form-control"></td>
+      </td><td><input id="inboundUrban2" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban2Value"></span> %</td>
+      <td><input type="text" id="outboundUrban2" name="outboundUrban2" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>2-3</td>
+      <td><input type="number" id="aadtRural3" name="aadtRural3" class="form-control"></td>
+      <td><input id="inboundRural3" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural3Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural3" name="outboundRural3" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban3" name="aadtUrban3" class="form-control"></td>
+      </td><td><input id="inboundUrban3" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban3Value"></span> %</td>
+      <td><input type="text" id="outboundUrban3" name="outboundUrban3" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>3-4</td>
+      <td><input type="number" id="aadtRural4" name="aadtRural4" class="form-control"></td>
+      <td><input id="inboundRural4" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural4Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural4" name="outboundRural4" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban4" name="aadtUrban4" class="form-control"></td>
+      </td><td><input id="inboundUrban4" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban4Value"></span> %</td>
+      <td><input type="text" id="outboundUrban4" name="outboundUrban4" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr>
+    <tr>
+      <td>0-1</td>
+      <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+      <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48"/><span id="inboundRural1Value"></span> %
+      </td>
+      <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+      <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+      </td><td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47"/><span id="inboundUrban1Value"></span> %</td>
+      <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+    </tr> -->
   </tbody>
 </table>
         </div>
+        <button id="generate" name="button" class="btn btn-info">Generate</button>
           <button type="submit" name="button" id="submitButton" class="btn btn-success">Submit</button>
         </form>
       </div>
