--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Urban3
 <!DOCTYPE html>
 <html>
 
@@ -7,9 +6,9 @@ Urban3
   <link rel="stylesheet" href="/build/css/vendor.css">
   <link rel="stylesheet" href="/build/css/styles.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dustjs-linkedin/2.7.5/dust-full.min.js"></script>
   <script type="text/javascript" src="/build/js/vendor.min.js"></script>
   <script type="text/javascript" src="/build/js/app.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dustjs-linkedin/2.7.5/dust-full.min.js"></script>
   <title>Traffic Hourly Distribution</title>
 </head>
 
@@ -22,33 +21,16 @@ Urban3
       <div class="panel-heading">Calculator</div>
       <div class="panel-body">
         <div class="form-group">
-          <table class="table table-striped">
+          <table class="table table-striped" id="trafficTable">
             <thead>
               <tr>
                 <th>Hour</th>
                 <th>AADT Rural(%)</th>
-                <th>Inbound Rural(%)</th>
-                <th>Outbound Rural(%)</th>
-                <th>AADT Urban(%)</th>
-                <th>Inbound Urban(%)</th>
-                <th>Outbound Urban(%)</th>
+                <th>AADT Rural</th>
               </tr>
             </thead>
             <tbody>
-              <!-- 0 to 1 -->
-              <div id="proto">
-                <tr>
-                  <td>0-1</td>
-                  <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
-                  <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48" /><span id="inboundRural1Value"></span> %
-                  </td>
-                  <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
-                  <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
-                  </td>
-                  <td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47" /><span id="inboundUrban1Value"></span> %</td>
-                  <td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
-                </tr>
-              </div>
+              <div id="hours"></div>
             </tbody>
           </table>
         </div>
@@ -57,8 +39,20 @@ Urban3
       </div>
     </div>
   </div>
-
-  <div id="container"></div>
 </body>
 
 </html>
+
+
+<!-- The sliders with all the other fields -->
+<!-- <tr>
+  <td>0-1</td>
+  <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
+  <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48" /><span id="inboundRural1Value"></span> %
+  </td>
+  <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
+  <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
+</td>
+<td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47" /><span id="inboundUrban1Value"></span> %</td>
+<td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
+</tr> -->
