--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 
   <div class="container">
     <h1 class="jumbotron">Traffic Hourly distribution</h1>
-
+    <div class="well">
+      <h5>The current array is: <br>
+        <ul>
+        <div id="currentArray"></div>
+        </ul>
+        (this is just for checking)</h5>
+    </div>
     <div class="panel panel-info">
       <div class="panel-heading">Calculator</div>
       <div class="panel-body">
@@ -28,6 +34,7 @@
                 <th>Hour</th>
                 <th>AADT Rural(%)</th>
                 <th>AADT Rural</th>
+                <th>Manual input</th>
               </tr>
             </thead>
             <tbody>
@@ -43,17 +50,3 @@
 </body>
 
 </html>
-
-
-<!-- The sliders with all the other fields -->
-<!-- <tr>
-  <td>0-1</td>
-  <td><input type="number" id="aadtRural1" name="aadtRural1" class="form-control"></td>
-  <td><input id="inboundRural1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="48" /><span id="inboundRural1Value"></span> %
-  </td>
-  <td><input type="text" id="outboundRural1" name="outboundRural1" class="form-control" disabled=true></td>
-  <td><input type="number" id="aadtUrban1" name="aadtUrban1" class="form-control"></td>
-</td>
-<td><input id="inboundUrban1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="47" /><span id="inboundUrban1Value"></span> %</td>
-<td><input type="text" id="outboundUrban1" name="outboundUrban1" class="form-control" disabled=true></td>
-</tr> -->
