--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </ul>
         (this is just for checking)</h5>
     </div>
+    <div class="alert alert-danger">
+   <strong>Out of range!</strong> The current total percentage is more than 100%.
+   </div>
     <div class="panel panel-info">
       <div class="panel-heading">Calculator</div>
       <div class="panel-body">
